--- a/src/.gitignore
+++ b/src/.gitignore
@@ -1,2 +1,30 @@
+# Virtual Environment
+venv/
+env/
 .env
+
+# Python
 __pycache__/
+*.py[cod]
+*$py.class
+.Python
+*.so
+
+# VS Code
+.vscode/
+
+# Distribution / packaging
+dist/
+build/
+*.egg-info/
+
+# Local development settings
+.env.local
+.env.*.local
+
+# Logs
+*.log
+
+# Reports and output files
+report.md
+*.pdf
