--- a/requirements.txt
+++ b/requirements.txt
@@ -9,4 +9,7 @@ PyYAML>=5.4.1
 markdown>=3.3.4
 reportlab>=3.6.8
 urllib3>=1.26.7
-lxml>=4.9.0 
+lxml>=4.9.0
+fastapi>=0.68.0
+uvicorn>=0.15.0
+aio-pika>=9.3.0 
