--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -6,7 +6,7 @@ services:
       deploy_on_push: true
       repo: your-username/SEO-Agent
     build_command: pip install -r requirements.txt
-    run_command: uvicorn src.api:app --host 0.0.0.0 --port 8000
+    run_command: uvicorn src.main:app --host 0.0.0.0 --port 8000
     envs:
       - key: OPENAI_API_KEY
         type: SECRET
