--- a/requirements.txt
+++ b/requirements.txt
@@ -10,4 +10,7 @@ markdown>=3.3.4
 reportlab>=3.6.8
 urllib3>=1.26.7
 lxml>=4.9.0
-pika==1.3.1 
+pika==1.3.1
+psycopg2-binary==2.9.9
+fastapi>=0.109.0
+uvicorn>=0.27.0 
