--- a/app.yaml
+++ b/app.yaml
@@ -3,9 +3,9 @@ services:
   - name: web
     environment_slug: python
     github:
-      branch: main
+      branch: DigitalOcean
       deploy_on_push: true
-      repo: your-username/your-repo-name
+      repo: https://github.com/masumi-network/crewai-seo-agent
     build_command: pip install -r requirements.txt
     run_command: uvicorn src.service:app --host 0.0.0.0 --port $PORT
     envs:
